gke/ilb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-internal
  labels:
    run: hello-app-internal
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: ClusterIP
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app
